--- a/index.html
+++ b/index.html
@@ -1,2 +1,79 @@
-# San-Valent-n
-Página romántica para mi novio 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Flores para ti 🌸</title>
+
+<style>
+body{
+    margin:0;
+    padding:0;
+    background:linear-gradient(to bottom, #ffdde1, #ee9ca7);
+    font-family:Arial, sans-serif;
+    text-align:center;
+}
+
+h1{
+    margin-top:30px;
+    color:#b30059;
+}
+
+.garden{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    gap:30px;
+    margin-top:40px;
+}
+
+.flower{
+    font-size:70px;
+    cursor:pointer;
+    transition:transform 0.3s;
+}
+
+.flower:hover{
+    transform:scale(1.2);
+}
+
+.message{
+    margin-top:30px;
+    font-size:20px;
+    color:#800040;
+    min-height:40px;
+    padding:0 20px;
+}
+</style>
+</head>
+
+<body>
+
+<h1>Un jardín lleno de cosas que siento por ti 🌸💖</h1>
+
+<div class="garden">
+    <div class="flower" onclick="showMessage(0)">🌸</div>
+    <div class="flower" onclick="showMessage(1)">🌷</div>
+    <div class="flower" onclick="showMessage(2)">🌹</div>
+    <div class="flower" onclick="showMessage(3)">🌺</div>
+    <div class="flower" onclick="showMessage(4)">🌼</div>
+</div>
+
+<div class="message" id="message"></div>
+
+<script>
+const messages = [
+"Me haces sonreír incluso en mis días más difíciles 💕",
+"Eres mi lugar seguro y mi persona favorita ✨",
+"Gracias por existir y por estar en mi vida 🌷",
+"Contigo todo se siente más bonito 🌹",
+"Te elegiría mil veces más 💖"
+];
+
+function showMessage(index){
+    document.getElementById("message").innerText = messages[index];
+}
+</script>
+
+</body>
+</html>
